--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Landing page</title>
 </head>
 
 <body>
+    <main class="main-content">
+        <div class="container">
+            <div class="header">
+                <h1 class="main-header">Discover the beauty around the world</h1>
+                <p class="main-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in
+                    libero
+                    risus
+                    semper habitant arcu eget. Et integer facilisi eget diam.</p>
+                <a class="main-link" href="#">Explore</a>
+            </div>
+
+            <div class="image-list">
+                <img src="/img/img1.jpg" alt="" class="image-list-item">
+                <img src="/img/img2.jpg" alt="" class="image-list-item">
+                <img src="/img/img3.jpg" alt="" class="image-list-item">
+                <img src="/img/img4.jpg" alt="" class="image-list-item">
+                <img src="/img/img5.jpg" alt="" class="image-list-item">
+                <img src="/img/img6.jpg" alt="" class="image-list-item">
+                <img src="/img/img1.jpg" alt="" class="image-list-item">
+                <img src="/img/img6.jpg" alt="" class="image-list-item">
+            </div>
+        </div>
+    </main>
+
     <script src="./js/script.js"></script>
 </body>
 
